# Curriculum_Design-Project-Five_Chess

./: AI base.h  CMakeLists.txt  Five_Chess.sln  Game Logic.cpp  Game Logic.h  Graphics Logic.cpp  Graphics Logic.h  README.md  Search_AI.cpp  Search_AI.h  main.cpp
CMake awa/: CMakeLists.txt  Graphics Logic.cpp  Search_AI.cpp  main.cpp
Five_Chess/: Five_Chess.vcxproj  Five_Chess.vcxproj.filters  resource_setting.rc
Five_Chess/x64/Debug/: Five_Chess.exe.recipe  Five_Chess.ilk  resource_setting.res  vc143.idb
Five_Chess/x64/Debug/Five_Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Five_Chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
Five_Chess/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
Five_Chess/x64/Release/: Five_Chess.exe.recipe  Five_Chess.iobj  Five_Chess.ipdb
Five_Chess/x64/Release/Five_Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Five_Chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Five_Chess/x64/Release/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
Project/source code/: Common.h  Game Logic.cpp  Game Logic.h  Graphics Logic.cpp  Graphics Logic.h  Player_base.h  Search_AI.cpp  Search_AI.h  main.cpp
source code/: AI base.h  Graphics Logic.cpp  Graphics Logic.h  Search_AI.h  main.cpp
